Use AVX512 direct conversion for scalar half-precision path and add new classes to JMH source.